[package]
name = "candy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.4"
hex = "0.4.3"
ic-cdk = "0.7.3"
num-bigint = "0.4.3"
num-traits = "0.2.15"
serde = "1.0.160"
serde_json = "1.0.93"

[dev-dependencies]
pretty_assertions = "1.3.0"
