[package]
name = "ic_candy"
version = "0.2.0"
edition = "2021"
authors = ["IT-Union DAO", "Andrei Dunai"]
repository = "https://github.com/IT-Union-DAO/candy-rs"
license = "MIT"
readme = "README.md"
description = "ICP data types wrappers and additional functions"
keywords = ["icp", "motoko", "dfinity", "canisters", "dfx"]
include = ["src/", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.10.8"
hex = "0.4.3"
ic-cdk = "0.14.0"
num-bigint = "0.4.5"
num-traits = "0.2.19"
serde = "1.0.203"
serde_json = "1.0.117"

[dev-dependencies]
pretty_assertions = "1.4.0"
