[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.8"
ic-cdk = "0.14.0"
ic-cdk-macros = "0.14.0"
ic_candy = { path = "../../../../candy-rs" }
serde = "1.0.203"
